--- a/public/boys/src/app/views/shareavatar/ShareAvatarView.html
+++ b/public/boys/src/app/views/shareavatar/ShareAvatarView.html
@@ -3,89 +3,89 @@
         <div class="avatar-style ">
         <div class="after">
             <div class="avatar-effect none">
-               <img src="/images/exposure1.jpg" alt="" effectIndex="2">
-               <img src="/images/paint1.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style1.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure1.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint1.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style1.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure2.jpg" alt="" effectIndex="2">
-               <img src="/images/paint2.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style2.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure2.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint2.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style2.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure3.jpg" alt="" effectIndex="2">
-               <img src="/images/paint3.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style3.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure3.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint3.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style3.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure4.jpg" alt="" effectIndex="2">
-               <img src="/images/paint4.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style4.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure4.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint4.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style4.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure5.jpg" alt="" effectIndex="2">
-               <img src="/images/paint5.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style5.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure5.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint5.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style5.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure6.jpg" alt="" effectIndex="2">
-               <img src="/images/paint6.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style6.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure6.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint6.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style6.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure7.jpg" alt="" effectIndex="2">
-               <img src="/images/paint7.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style7.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure7.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint7.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style7.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>
         </div>
         <div class="before">
-            <img src="/images/original1.jpg">
-            <img src="/images/original2.jpg">
-            <img src="/images/original3.jpg">
-            <img src="/images/original4.jpg">
-            <img src="/images/original5.jpg">
-            <img src="/images/original6.jpg">
-            <img src="/images/original7.jpg">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original1.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original2.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original3.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original4.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original5.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original6.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original7.jpg?imageMogr2/interlace/1">
         </div>
         </div>
         <div class="effect-list">
             <div class="effect none">
-               <img src="/images/exposure1.jpg" alt="" effectIndex="2">
-               <img src="/images/paint1.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style1.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure1.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint1.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style1.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="effect none">
-               <img src="/images/exposure2.jpg" alt="" effectIndex="2">
-               <img src="/images/paint2.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style2.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure2.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint2.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style2.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="effect none">
-               <img src="/images/exposure3.jpg" alt="" effectIndex="2">
-               <img src="/images/paint3.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style3.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure3.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint3.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style3.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="effect none">
-               <img src="/images/exposure4.jpg" alt="" effectIndex="2">
-               <img src="/images/paint4.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style4.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure4.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint4.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style4.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="effect none">
-               <img src="/images/exposure5.jpg" alt="" effectIndex="2">
-               <img src="/images/paint5.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style5.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure5.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint5.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style5.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="effect none">
-               <img src="/images/exposure6.jpg" alt="" effectIndex="2">
-               <img src="/images/paint6.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style6.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure6.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint6.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style6.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="effect none">
-               <img src="/images/exposure7.jpg" alt="" effectIndex="2">
-               <img src="/images/paint7.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style7.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure7.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint7.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style7.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>
         </div>
-        <div class="tips"><img src="/images/04tips01.png"></div>
+        <div class="tips"><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/04tips01.png"></div>
         <div id="uploadImage" class="btn-panel">
             <div  class="upload"></div>
         </div>
