--- a/public/boys/src/app/views/uploadsuspend/UploadSuspendView.html
+++ b/public/boys/src/app/views/uploadsuspend/UploadSuspendView.html
@@ -1,4 +1,4 @@
     <div class="upload-suspend">
         <div class="main"></div>
-        <div class="qr"><img class="qrcode" src="/images/qr.png"></div>
+        <div class="qr"><img class="qrcode" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/qr.png"></div>
     </div>
