--- a/public/boys/src/less/index.less
+++ b/public/boys/src/less/index.less
@@ -123,7 +123,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
         display: block;
         width: 56%;
         height: 9.14rem;
-        background: url(/images/btn.png) 0 0 no-repeat;
+        background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/btn.png) 0 0 no-repeat;
         background-size: contain;
     }
     .mongolia-layer {
@@ -325,7 +325,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
 	    height: 3.5rem;
 	    margin: 0 auto 1.3rem;
 	    padding: 1.58rem 4% 1rem 12%;
-	    background: url(/images/receive.png) 0 0 no-repeat;
+	    background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/receive.png) 0 0 no-repeat;
 	    background-size: contain;
 		li {
 			overflow: hidden;
@@ -348,7 +348,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
 		width: 41%;
 		height: 4.46rem;
 		margin: 0 auto;
-		background: url(/images/btn_big.png) 0 0 no-repeat;
+		background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/btn_big.png) 0 0 no-repeat;
 		background-size: contain;
 		img {
 			position: absolute;
@@ -408,7 +408,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
         }
         .fans {
             position: absolute;
-            background: url(/images/03fans.png) no-repeat center;
+            background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/03fans.png) no-repeat center;
             background-size: contain;
             width: 3.57rem;
             height: 7.43rem;
@@ -430,7 +430,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
     }
     .btn-panel {
         position: relative;
-        background: url(/images/03btn.png) no-repeat center;
+        background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/03btn.png) no-repeat center;
         background-size: contain;
         height: 11.68rem;
         width: 23.11rem;
@@ -471,7 +471,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
         right: 2.29rem;
         width: 2.82rem;
         height: 2.57rem;
-        background: url("/images/share.png") center no-repeat;
+        background: url("http://7u2spr.com1.z0.glb.clouddn.com/boys/share.png") center no-repeat;
         background-size: contain;
     }
 }
@@ -490,7 +490,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
         width: 23.21rem;
         height: 34.39rem;
         margin: 2.29rem auto;
-        background: url(/images/05pop.png) no-repeat center;
+        background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/05pop.png) no-repeat center;
         background-size: contain;
         a {
             position: absolute;
@@ -515,7 +515,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
     .main {
         position: relative;
         overflow: hidden;
-        background: url(/images/08tips.png) no-repeat left;
+        /*background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/08tips.png) no-repeat left;*/
         background-size: contain;
         width: 20.18rem;
         height: 38.68rem;
@@ -548,7 +548,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
     .main {
         position: relative;
         overflow: hidden;
-        background: url(/images/06tips.png) no-repeat center;
+        background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/06tips.png) no-repeat center;
         background-size: contain;
         width: 26.14rem;
         height: 38.71rem;
@@ -630,7 +630,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
     .btn-panel {
         position: relative;
         overflow: hidden;
-        background: url(/images/07btn01.png) no-repeat center;
+        background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/07btn01.png) no-repeat center;
         background-size: contain;
         width: 13.54rem;
         height: 7.71rem;
@@ -651,7 +651,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
     }
     .qrtips {
         position: relative;
-        background: url(/images/07qrtips.png) no-repeat center;
+        background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/07qrtips.png) no-repeat center;
         background-size: contain;
         width: 11.93rem;
         height: 0.86rem;
@@ -669,7 +669,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
     .share-success-tips{
         position: relative;
         overflow: hidden;
-        background: url(/images/04share-success.png) no-repeat center;
+        background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/04share-success.png) no-repeat center;
         background-size: contain;
         height: 2.07rem;
         width: 8.61rem;
@@ -708,7 +708,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
         }
         .fans {
             position: absolute;
-            background: url(/images/03fans.png) no-repeat center;
+            background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/03fans.png) no-repeat center;
             background-size: contain;
             width: 3.57rem;
             height: 7.43rem;
@@ -743,7 +743,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
     }
     .btn-panel {
         position: relative;
-        background: url(/images/04btn01.png) no-repeat center;
+        background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/04btn01.png) no-repeat center;
         background-size: contain;
         height: 4.32rem;
         width: 10.43rem;
@@ -759,7 +759,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
 }
 .obtain-success {
     height: 100%;
-    background: #fbd398 url(/images/2bg.png) 0 0 no-repeat;
+    background: #fbd398 url(http://7u2spr.com1.z0.glb.clouddn.com/boys/2bg.png) 0 0 no-repeat;
     background-size: contain;
     .get-effect {
         padding-top: 1.82rem;
@@ -781,9 +781,21 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
             border-radius: 8%;
         }
     }
+    .download {
+        margin-bottom: 1rem;
+        font-size: 1rem;
+        line-height: 1.29rem;
+        text-align: center;
+        img {
+            display: block;
+            width: 40%;
+            height: 4.14rem;
+            margin: 0 auto;
+        }
+    }
     .author {
+        margin-bottom: 1rem;
         padding-right: 12%;
-        margin-bottom: 3.11rem;
         img{
             float: right;
             width: 35%;
