--- a/public/boys/src/app/views/getavatar/GetAvatarView.html
+++ b/public/boys/src/app/views/getavatar/GetAvatarView.html
@@ -2,87 +2,87 @@
     <div class="avatar-style ">
         <div class="after">
             <div class="avatar-effect none">
-               <img src="/images/exposure1.jpg" alt="" effectIndex="2">
-               <img src="/images/paint1.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style1.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure1.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint1.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style1.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure2.jpg" alt="" effectIndex="2">
-               <img src="/images/paint2.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style2.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure2.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint2.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style2.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure3.jpg" alt="" effectIndex="2">
-               <img src="/images/paint3.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style3.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure3.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint3.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style3.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure4.jpg" alt="" effectIndex="2">
-               <img src="/images/paint4.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style4.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure4.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint4.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style4.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure5.jpg" alt="" effectIndex="2">
-               <img src="/images/paint5.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style5.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure5.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint5.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style5.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure6.jpg" alt="" effectIndex="2">
-               <img src="/images/paint6.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style6.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure6.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint6.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style6.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>            
             <div class="avatar-effect none">
-               <img src="/images/exposure7.jpg" alt="" effectIndex="2">
-               <img src="/images/paint7.jpg" alt="" effectIndex="3">
-               <img src="/images/european-style7.jpg" alt="" effectIndex="4">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure7.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint7.jpg?imageMogr2/interlace/1" alt="" effectIndex="3">
+               <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style7.jpg?imageMogr2/interlace/1" alt="" effectIndex="4">
             </div>
         </div>
         <div class="before">
-            <img src="/images/original1.jpg">
-            <img src="/images/original2.jpg">
-            <img src="/images/original3.jpg">
-            <img src="/images/original4.jpg">
-            <img src="/images/original5.jpg">
-            <img src="/images/original6.jpg">
-            <img src="/images/original7.jpg">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original1.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original2.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original3.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original4.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original5.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original6.jpg?imageMogr2/interlace/1">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original7.jpg?imageMogr2/interlace/1">
         </div>
         <div class="fans"></div>
     </div>
     <div id="downloadImage" class="tips">
         <div class="random none">
-            <img src="/images/double1.png">
-            <img src="/images/color1.png">
-            <img src="/images/europe_style1.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/double1.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/color1.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/europe_style1.png">
         </div>        
         <div class="random none">
-            <img src="/images/double2.png">
-            <img src="/images/color2.png">
-            <img src="/images/europe_style2.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/double2.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/color2.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/europe_style2.png">
         </div>        
         <div class="random none">
-            <img src="/images/double3.png">
-            <img src="/images/color3.png">
-            <img src="/images/europe_style3.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/double3.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/color3.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/europe_style3.png">
         </div>        
         <div class="random none">
-            <img src="/images/double4.png">
-            <img src="/images/color4.png">
-            <img src="/images/europe_style4.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/double4.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/color4.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/europe_style4.png">
         </div>        
         <div class="random none">
-            <img src="/images/double5.png">
-            <img src="/images/color5.png">
-            <img src="/images/europe_style5.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/double5.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/color5.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/europe_style5.png">
         </div>        
         <div class="random none">
-            <img src="/images/double6.png">
-            <img src="/images/color6.png">
-            <img src="/images/europe_style6.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/double6.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/color6.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/europe_style6.png">
         </div>        
         <div class="random none">
-            <img src="/images/double7.png">
-            <img src="/images/color7.png">
-            <img src="/images/europe_style7.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/double7.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/color7.png">
+            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/europe_style7.png">
         </div>
     </div>
     <div class="btn-panel">
