--- a/public/boys/src/app/views/index/IndexView.html
+++ b/public/boys/src/app/views/index/IndexView.html
@@ -1,19 +1,19 @@
 <div class="wrap-index">
 	<div class="wrap-kong" id="select_boy"></div>
-	<div class="index-pic"><img src="/images/pic.png" alt=""></div>
+	<div class="index-pic"><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/pic.png" alt=""></div>
 	<div class="pic-box swiper-container">
 		<ul class="men-god clearfix swiper-wrapper">
-			<li class="swiper-slide"><img class="main-img" src="/images/original1.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original2.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original3.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original4.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original5.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original6.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original7.jpg" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original1.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original2.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original3.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original4.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original5.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original6.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original7.jpg?imageMogr2/interlace/1" alt=""></li>
 		</ul>
 	</div>
 	<a href="boys/selectmale/selectmale"  class="choice"></a>
-	<img class="finger-left" src="/images/left.png"></img>
-	<img class="finger-right" src="/images/right.png"></img>
-	<img class="mongolia-layer" src="/images/wen.png"></img>
+	<img class="finger-left" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/left.png"></img>
+	<img class="finger-right" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/right.png"></img>
+	<img class="mongolia-layer" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/wen.png"></img>
 </div>
