--- a/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
+++ b/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
@@ -1,80 +1,80 @@
 <div class="my-make">
 	<div class="pic-box  swiper-container men-box">
 		<ul class="men-god clearfix swiper-wrapper">
-			<li class="swiper-slide"><img class="main-img" src="/images/original1.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original2.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original3.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original4.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original5.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original6.jpg" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/original7.jpg" alt=""></li>
-	<!-- 		<li class="swiper-slide"><img class="main-img" src="/images/huge.png" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/liyifeng.png" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/songzhongji.png" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/wangjunkai.png" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/wangyuan.png" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/wuyifan.png" alt=""></li>
-			<li class="swiper-slide"><img class="main-img" src="/images/yiyangqianxi.png" alt=""></li> -->
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original1.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original2.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original3.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original4.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original5.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original6.jpg?imageMogr2/interlace/1" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original7.jpg?imageMogr2/interlace/1" alt=""></li>
+	<!-- 		<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/huge.png" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/liyifeng.png" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/songzhongji.png" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/wangjunkai.png" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/wangyuan.png" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/wuyifan.png" alt=""></li>
+			<li class="swiper-slide"><img class="main-img" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/yiyangqianxi.png" alt=""></li> -->
 		</ul>
 	</div>
 
 <!-- 	<ul class="designer-name clearfix">
-		<li><img src="/images/design.png" alt=""></li>
-		<li><img src="/images/design.png" alt=""></li>
-		<li><img src="/images/design.png" alt=""></li>
+		<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/design.png" alt=""></li>
+		<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/design.png" alt=""></li>
+		<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/design.png" alt=""></li>
 	</ul>	 -->
 
 	<div id="flyItem" class="fly_item"><img src=""></div>
 	<div class="character-effect">
 		<ul class="designer-pic clearfix hegu none">
-			<li><img src="/images/original1.jpg" alt="" effectIndex="1"></li>
-			<li><img src="/images/exposure1.jpg" alt="" effectIndex="2"></li>
-			<li><img src="/images/paint1.jpg" alt="" effectIndex="3"></li>
-			<li><img src="/images/european-style1.jpg" alt="" effectIndex="4"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original1.jpg?imageMogr2/interlace/1" alt="" effectIndex="1"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure1.jpg?imageMogr2/interlace/1" alt="" effectIndex="2"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint1.jpg?imageMogr2/interlace/1" alt="" effectIndex="3"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style1.jpg?imageMogr2/interlace/1" alt="" effectIndex="4"></li>
 		</ul>		
 		<ul class="designer-pic clearfix luhang none">
-			<li><img src="/images/original2.jpg" alt="" effectIndex="1"></li>
-			<li><img src="/images/exposure2.jpg" alt="" effectIndex="2"></li>
-			<li><img src="/images/paint2.jpg" alt="" effectIndex="3"></li>
-			<li><img src="/images/european-style2.jpg" alt="" effectIndex="4"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original2.jpg?imageMogr2/interlace/1" alt="" effectIndex="1"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure2.jpg?imageMogr2/interlace/1" alt="" effectIndex="2"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint2.jpg?imageMogr2/interlace/1" alt="" effectIndex="3"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style2.jpg?imageMogr2/interlace/1" alt="" effectIndex="4"></li>
 		</ul>	
 		<ul class="designer-pic clearfix songzhongji none">
-			<li><img src="/images/original3.jpg" alt="" effectIndex="1"></li>
-			<li><img src="/images/exposure3.jpg" alt="" effectIndex="2"></li>
-			<li><img src="/images/paint3.jpg" alt="" effectIndex="3"></li>
-			<li><img src="/images/european-style3.jpg" alt="" effectIndex="4"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original3.jpg?imageMogr2/interlace/1" alt="" effectIndex="1"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure3.jpg?imageMogr2/interlace/1" alt="" effectIndex="2"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint3.jpg?imageMogr2/interlace/1" alt="" effectIndex="3"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style3.jpg?imageMogr2/interlace/1" alt="" effectIndex="4"></li>
 		</ul>		
 		<ul class="designer-pic clearfix wangjunkai none">
-			<li><img src="/images/original4.jpg" alt="" effectIndex="1"></li>
-			<li><img src="/images/exposure4.jpg" alt="" effectIndex="2"></li>
-			<li><img src="/images/paint4.jpg" alt="" effectIndex="3"></li>
-			<li><img src="/images/european-style4.jpg" alt="" effectIndex="4"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original4.jpg?imageMogr2/interlace/1" alt="" effectIndex="1"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure4.jpg?imageMogr2/interlace/1" alt="" effectIndex="2"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint4.jpg?imageMogr2/interlace/1" alt="" effectIndex="3"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style4.jpg?imageMogr2/interlace/1" alt="" effectIndex="4"></li>
 		</ul>		
 		<ul class="designer-pic clearfix wangyuan none">
-			<li><img src="/images/original5.jpg" alt="" effectIndex="1"></li>
-			<li><img src="/images/exposure5.jpg" alt="" effectIndex="2"></li>
-			<li><img src="/images/paint5.jpg" alt="" effectIndex="3"></li>
-			<li><img src="/images/european-style5.jpg" alt="" effectIndex="4"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original5.jpg?imageMogr2/interlace/1" alt="" effectIndex="1"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure5.jpg?imageMogr2/interlace/1" alt="" effectIndex="2"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint5.jpg?imageMogr2/interlace/1" alt="" effectIndex="3"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style5.jpg?imageMogr2/interlace/1" alt="" effectIndex="4"></li>
 		</ul>		
 		<ul class="designer-pic clearfix wuyifan none">
-			<li><img src="/images/original6.jpg" alt="" effectIndex="1"></li>
-			<li><img src="/images/exposure6.jpg" alt="" effectIndex="2"></li>
-			<li><img src="/images/paint6.jpg" alt="" effectIndex="3"></li>
-			<li><img src="/images/european-style6.jpg" alt="" effectIndex="4"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original6.jpg?imageMogr2/interlace/1" alt="" effectIndex="1"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure6.jpg?imageMogr2/interlace/1" alt="" effectIndex="2"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint6.jpg?imageMogr2/interlace/1" alt="" effectIndex="3"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style6.jpg?imageMogr2/interlace/1" alt="" effectIndex="4"></li>
 		</ul>		
 		<ul class="designer-pic clearfix yiyangqianxi none">
-			<li><img src="/images/original7.jpg" alt="" effectIndex="1"></li>
-			<li><img src="/images/exposure7.jpg" alt="" effectIndex="2"></li>
-			<li><img src="/images/paint7.jpg" alt="" effectIndex="3"></li>
-			<li><img src="/images/european-style7.jpg" alt="" effectIndex="4"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/original7.jpg?imageMogr2/interlace/1" alt="" effectIndex="1"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure7.jpg?imageMogr2/interlace/1" alt="" effectIndex="2"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/paint7.jpg?imageMogr2/interlace/1" alt="" effectIndex="3"></li>
+			<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/european-style7.jpg?imageMogr2/interlace/1" alt="" effectIndex="4"></li>
 		</ul>
 	</div>	
 
 	<ul class="designer-effect clearfix">
-		<li><img src="/images/btn_a.png" alt=""></li>
-		<li><img src="/images/btn_b.png" alt=""></li>
-		<li><img src="/images/btn_c.png" alt=""></li>
-		<li><img src="/images/btn_d.png" alt=""></li>
+		<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/btn_a.png" alt=""></li>
+		<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/btn_b.png" alt=""></li>
+		<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/btn_c.png" alt=""></li>
+		<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/btn_d.png" alt=""></li>
 	</ul>
 	<ul class="receive-user clearfix">
  <% _.each(avatars,function(i, img){ %> 
@@ -82,6 +82,6 @@
  <% }) %> 
 	</ul>
 	<a href="" class="want-mank">
-		<img src="/images/girl.png" alt="">
+		<img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/girl.png" alt="">
 	</a>
 </div>
