--- a/public/boys/src/app/views/uploadagain/UploadAgainView.html
+++ b/public/boys/src/app/views/uploadagain/UploadAgainView.html
@@ -1,12 +1,12 @@
 <div class="upload-again">
     <div class="designer clearfix">
-        <div class="avatar"><img src="/images/4btn_c@3x.png"></div>
+        <div class="avatar"><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/4btn_c@3x.png"></div>
         <div class="reason"></div>
-        <div class="nickname"><img src="/images/07designer-nickname.png"></div>
+        <div class="nickname"><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/07designer-nickname.png"></div>
     </div>
     <div id="uploadImage" class="btn-panel"></div>
     <div class="qr">
-        <img class="qrcode" src="/images/qr.png">
+        <img class="qrcode" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/qr.png">
         <div class="qrtips"></div>
     </div>
 </div>  
