--- a/public/boys/src/app/views/getavatar/GetAvatarView.html
+++ b/public/boys/src/app/views/getavatar/GetAvatarView.html
@@ -86,7 +86,7 @@
         </div>
     </div>
     <div class="btn-panel">
-        <span id="uploadPopup" class="upload"></span>
+        <span id="uploadPopup" data-rand="<%= rand %>" class="upload"></span>
         <span href="#share" class="share"></span>
     </div>
 </div>
