--- a/public/boys/src/app/views/uploadagain/UploadAgainView.html
+++ b/public/boys/src/app/views/uploadagain/UploadAgainView.html
@@ -5,7 +5,7 @@
     </div>
     <div id="uploadImage" class="btn-panel"></div>
     <div class="qr">
-        <img class="qrcode" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/qr.png">
+        <img class="qrcode" src="http://7u2spr.com1.z0.glb.clouddn.com/20160318-18303156ebd8c78bb18.jpg">
         <div class="qrtips"></div>
     </div>
 </div>  
