--- a/public/boys/src/less/index.less
+++ b/public/boys/src/less/index.less
@@ -559,6 +559,13 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
             left: 13.93rem;
             width: 10rem;
             height: auto;
+        }        
+        div {
+            position: absolute;
+            top: 18.8rem;
+            right: 5%;
+            width: 50%;
+            line-height: 1.64rem;
         }
     }
     .qr {
