--- a/public/boys/src/app/views/uploadsuccess/UploadSuccessView.html
+++ b/public/boys/src/app/views/uploadsuccess/UploadSuccessView.html
@@ -1,5 +1,11 @@
 <div class="upload-success">
-    <div class="main"><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/06queue01.png"></div>
-    <div class="qr"><img class="qrcode" src="http://7u2spr.com1.z0.glb.clouddn.com/boys/qr.png"></div>
+    <div class="main">
+    	<div>
+    		PS爱好者们正在努力P图中～<br/>
+    		前面还有<span id="dataUser">12</span>位<br />
+    		作品完成剩余时间：<em id="dataTime"></em>
+    	</div>
+    </div>
+    <div class="qr"><img class="qrcode" src="http://7u2spr.com1.z0.glb.clouddn.com/20160318-18303156ebd8c78bb18.jpg"></div>
     <div class="copyright">本次活动为免费活动，P图者均为ps爱好者，以娱乐为主，如有不周概不负责</div>
 </div>
