--- a/public/boys/src/app/views/obtainsuccess/ObtainSuccessView.html
+++ b/public/boys/src/app/views/obtainsuccess/ObtainSuccessView.html
@@ -37,7 +37,7 @@
 		</div>					
 	</div>
 	<div class="effect-pic">
-           <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure1.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
+           <img src="<%= $('body').attr('data-iamge') %>" alt="" effectIndex="2">
 		
 <!--         <div class="avatar-effect none">
            <img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/exposure1.jpg?imageMogr2/interlace/1" alt="" effectIndex="2">
