--- a/public/boys/src/app/views/getavatar/GetAvatarView.html
+++ b/public/boys/src/app/views/getavatar/GetAvatarView.html
@@ -1,4 +1,4 @@
-<div class="get-avatar">
+<div class="get-avatar" id="boy_code" data-code="<%= data.code %>">
     <div class="avatar-style ">
         <div class="after">
             <div class="avatar-effect none">
