--- a/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
+++ b/public/boys/src/app/views/selectmale/SelectMaleGodsView.html
@@ -77,11 +77,7 @@
 		<li><img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/btn_d.png" alt=""></li>
 	</ul>
 	<ul class="receive-user clearfix">
- <% _.each(avatars,function(i, img){ %> 
-		<li><img src="<%= i %>" alt=""></li>
- <% }) %> 
+	<div id="selectionAvatar"></div>
 	</ul>
-	<a href="" class="want-mank">
-		<img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/girl.png" alt="">
-	</a>
+	<div id="selectButton"></div>
 </div>
