--- a/public/boys/src/app/views/selectmale/selectButtonView.html
+++ b/public/boys/src/app/views/selectmale/selectButtonView.html
@@ -1,3 +1,3 @@
-<a href="" class="want-mank" id="selectionButton" data-code="<%= code %>">
+<a  class="want-mank" id="selectionButton" data-code="<%= code %>">
 	<img src="http://7u2spr.com1.z0.glb.clouddn.com/boys/girl.png" alt="">
 </a>
