--- a/public/tasks/src/app/views/index/index.html
+++ b/public/tasks/src/app/views/index/index.html
@@ -1,3 +1,140 @@
-<div>
-    index test
+<div class="header">
+	<div class="nav-bar comWidth clearfix">
+		<div class="left-area clearfix">
+			<img src="/img/header-logo.png" alt="logo" class="header-logo">
+			<ul class="nav">
+				<li class="nav-items active">求P大厅</li>
+				<li class="nav-items">我的帮P</li>
+			</ul>
+		</div>
+		<div class="right-area">
+			<img src="/img/header-portrait.png" alt="头像" class="header-portrait">
+			<img src="/img/header-request.png" alt="大神求P" class="header-request">
+		</div>
+	</div>
+</div>
+<div class="wrap-page">
+	<div class="section-header comWidth">
+		<span class="latest">
+			最新动态
+		</span>
+		<span class="change">
+			<i class="change-icon"></i>
+			<span class="change-text">换一换</span>
+		</span>
+	</div>
+	<div class="section comWidth">
+		<div class="section-top clearfix">
+			<div class="section-leftarea">
+				<div class="section-portrait">
+					<img class="section-portrait-img" src="/img/section-portrait-1.png" alt="用户头像">
+				</div>
+				<ul class="section-info">
+					<li class="user-name">Ariadne</li>
+					<li class="pubdate">1天前</li>
+					<li class="command">求把我女票P成范女神</li>
+				</ul>
+			</div>
+			<div class="section-rightarea">
+				<input type="button" class="section-btn ps" value="帮P">
+				<input type="button" class="section-btn share" value="分享">
+			</div>
+		</div>
+		<div class="section-main">
+			<ul class="photos">
+				<li class="photo-item origin">
+					<div class="item-wrapper">
+						<img class="item-img" src="/img/photo-1-origin.png">
+					</div>
+					<i class="icon-origin"></i>
+				</li>
+				<li class="photo-item artwork-1"></li>
+				<li class="photo-item artwork-2"></li>
+			</ul>
+		</div>
+	</div>
+	<div class="section comWidth">
+		<div class="section-top clearfix">
+			<div class="section-leftarea">
+				<div class="section-portrait">
+					<img class="section-portrait-img" src="/img/section-portrait-2.png" alt="用户头像">
+				</div>
+				<ul class="section-info">
+					<li class="user-name">猫玖</li>
+					<li class="pubdate">1天前</li>
+					<li class="command">请把二哈p成在跳舞</li>
+				</ul>
+			</div>
+			<div class="section-rightarea">
+				<input type="button" class="section-btn ps" value="帮P">
+				<input type="button" class="section-btn share" value="分享">
+			</div>
+		</div>
+		<div class="section-main">
+			<ul class="photos">
+				<li class="photo-item origin">
+					<div class="item-wrapper">
+						<img class="item-img" src="/img/photo-2-origin.png">
+					</div>
+					<i class="icon-origin"></i>
+				</li>
+				<li class="photo-item artwork-1">
+					<div class="item-wrapper">
+						<img class="item-img" src="/img/photo-2-artwork-1.png">
+					</div>
+				</li>
+				<li class="photo-item artwork-2"></li>
+			</ul>
+		</div>
+	</div>
+	<div class="section comWidth">
+		<div class="section-top clearfix">
+			<div class="section-leftarea">
+				<div class="section-portrait">
+					<img class="section-portrait-img" src="/img/section-portrait-3.png" alt="用户头像">
+				</div>
+				<ul class="section-info">
+					<li class="user-name">苍井少侠</li>
+					<li class="pubdate">1天前</li>
+					<li class="command">请随意p~</li>
+				</ul>
+			</div>
+			<div class="section-rightarea">
+				<input type="button" class="section-btn ps" value="帮P">
+				<input type="button" class="section-btn share" value="分享">
+			</div>
+		</div>
+		<div class="section-main last-section">
+			<ul class="photos">
+				<li class="photo-item origin">
+					<div class="item-wrapper">
+						<img class="item-img" src="/img/photo-3-origin.png">
+					</div>
+					<i class="icon-origin"></i>
+				</li>
+				<li class="photo-item artwork-1">
+					<div class="item-wrapper">
+						<img class="item-img" src="/img/photo-3-artwork-1.png">
+					</div>
+				</li>
+				<li class="photo-item artwork-2">
+					<div class="item-wrapper">
+						<img class="item-img" src="/img/photo-3-artwork-2.png">
+					</div>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
+<div class="footer">
+	<ul class="page-list">
+		<li class="list-item prev false">上一页</li>
+		<li class="list-item active">1</li>
+		<li class="list-item">2</li>
+		<li class="list-item">3</li>
+		<li class="list-item">4</li>
+		<li class="list-item etc">...</li>
+		<li class="list-item">37</li>
+		<li class="list-item next">下一页</li>
+	</ul>
 </div>
