--- a/public/boys/src/less/index.less
+++ b/public/boys/src/less/index.less
@@ -535,7 +535,7 @@ background-image: linear-gradient(to right, rgb(249,191,196) 0%, rgb(251,156,176
     .main {
         position: relative;
         overflow: hidden;
-        background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/08tips.png) no-repeat left;
+        /*background: url(http://7u2spr.com1.z0.glb.clouddn.com/boys/08tips.png) no-repeat left;*/
         background-size: contain;
         width: 20.18rem;
         height: 38.68rem;
