--- a/public/tasks/src/app/views/index/index.html
+++ b/public/tasks/src/app/views/index/index.html
@@ -8,8 +8,12 @@
 			</ul>
 		</div>
 		<div class="right-area">
-			<img src="/img/header-portrait.png" alt="头像" class="header-portrait">
-			<img src="/img/header-request.png" alt="大神求P" class="header-request">
+			<div class="header-portrait">
+				<i class="portrait-icon"></i>
+			</div>
+			<div class="header-request">
+				<i class="request-icon"></i>
+			</div>
 		</div>
 	</div>
 </div>
