--- a/public/tasks/src/less/common.less
+++ b/public/tasks/src/less/common.less
@@ -103,11 +103,29 @@ body{
 		.header-portrait{
 			display: inline-block;
 			vertical-align: top;
+			width: 37px;
+			height: 37px;
+			overflow: hidden;
 			margin: 12px 40px 0 0;
+			.portrait-icon{
+				display: block;
+				width: 100%;
+				height: 100%;
+				background: url(/img/index-sprite.png) no-repeat -67px -42px;
+			}
 		}
 		.header-request{
 			display: inline-block;
 			vertical-align: top;
+			width: 70px;
+			height: 100px;
+			overflow: hidden;
+			.request-icon{
+				display: block;
+				width: 100%;
+				height: 100%;
+				background: url(/img/index-sprite.png)no-repeat -143px -42px;
+			}
 		}
 	}
 }
@@ -133,7 +151,7 @@ body{
 			display: inline-block;
 			width: 14px;
 			height: 13px;
-			background: url(/img/icon-change.png) no-repeat 0 0;
+			background: url(/img/index-sprite.png) no-repeat -27px -43px;
 		}
 		.change-text{
 			display: inline-block;
@@ -250,7 +268,7 @@ body{
 				left: 0;
 				width: 45px;
 				height: 28px;
-				background: url(/img/icon-origin.png)no-repeat 0 0;
+				background: url(/img/index-sprite.png)no-repeat -234px -42px;
 				z-index: 5;
 				opacity: 0.9;
 			}
