--- a/public/tasks/src/app/views/index/index.html
+++ b/public/tasks/src/app/views/index/index.html
@@ -1,26 +1,3 @@
-<<<<<<< HEAD
-<div class="header">
-	<div class="nav-bar comWidth clearfix">
-		<div class="left-area clearfix">
-			<img src="/img/header-logo.png" alt="logo" class="header-logo">
-			<ul class="nav">
-				<li class="nav-items active">求P大厅</li>
-				<li class="nav-items">我的帮P</li>
-			</ul>
-		</div>
-		<div class="right-area">
-			<div class="header-portrait">
-				<i class="portrait-icon"></i>
-			</div>
-			<div class="header-request">
-				<i class="request-icon"></i>
-			</div>
-		</div>
-	</div>
-</div>
-=======
-
->>>>>>> bef7b1ab06d6c545f20fdc964271ec166d9e4299
 <div class="wrap-page">
 	<div class="section-header comWidth">
 		<span class="latest">
@@ -46,6 +23,13 @@
 			<div class="section-rightarea">
 				<input type="button" class="section-btn ps" value="帮P">
 				<input type="button" class="section-btn share" value="分享">
+				<div class="qrcode">
+					<i class="icon-arrow"></i>
+					<div class="icon-qrcode">
+						<img src="/img/qrcode.png" alt="二维码" class="qrcode-img">
+					</div>
+					<span class="qrcode-footer">分享到朋友圈</span>
+				</div>
 			</div>
 		</div>
 		<div class="section-main">
