--- a/public/tasks/src/less/common.less
+++ b/public/tasks/src/less/common.less
@@ -100,13 +100,14 @@ body{
 	.right-area{
 		float: right;
 		font-size: 0px;
+		position: relative;
 		.header-portrait{
 			display: inline-block;
 			vertical-align: top;
 			width: 37px;
 			height: 37px;
 			overflow: hidden;
-			margin: 12px 40px 0 0;
+			margin: 12px 110px 0 0;
 			.portrait-icon{
 				display: block;
 				width: 100%;
@@ -115,8 +116,9 @@ body{
 			}
 		}
 		.header-request{
-			display: inline-block;
-			vertical-align: top;
+			position: absolute;
+			top: 0;
+			right: 0;
 			width: 70px;
 			height: 100px;
 			overflow: hidden;
@@ -223,6 +225,44 @@ body{
 			.share{
 				background-color: #7ecef4;
 				margin-left: 20px;
+			}
+			.qrcode{
+				position: absolute;
+				z-index: 800;
+				bottom: -20px;
+				right: 185px;
+				width: 100px;
+				height: 145px;
+				border: 1px solid #fff;
+				border-radius: 5px;
+				overflow: hidden;
+				background-color: #fff;
+				.icon-arrow{
+					display: block;
+					width: 20px;
+					height: 10px;
+					margin: 0 auto;
+					background: url(/img/index-sprite.png)no-repeat -113px -42px;
+				}
+				.icon-qrcode{
+					width: 100%;
+					height: 106px;
+					overflow: hidden;
+					.qrcode-img{
+						display: block;
+						width: 100%;
+					}
+				}
+				.qrcode-footer{
+					display: block;
+					height: 30px;
+					width: 100%;
+					line-height: 30px;
+					font-size: 14px;
+					text-align: center;
+					color: #cbebfb;
+					background-color: #7ecef4;
+				}
 			}
 		}
 	}
