--- a/public/tasks/src/less/common.less
+++ b/public/tasks/src/less/common.less
@@ -162,7 +162,6 @@ body{
 	}
 }
 .section{
-	height: 525px;
 	margin-bottom: 35px;
 	border: 1px solid #e8e8e8;
 	background-color: #fff;
@@ -170,7 +169,6 @@ body{
 		height: 90px;
 		padding: 15px 0;
 		margin: 0 15px;
-		overflow: hidden;
 		border-bottom: 1px solid #e8e8e8;
 		font-size: 0;
 		.section-leftarea{
@@ -210,6 +208,7 @@ body{
 		.section-rightarea{
 			float: right;
 			font-size: 16px;
+			position: relative;
 			.section-btn{
 				width: 75px;
 				height: 35px;
@@ -229,8 +228,8 @@ body{
 			.qrcode{
 				position: absolute;
 				z-index: 800;
-				bottom: -20px;
-				right: 185px;
+				bottom: -145px;
+				right: -15px;
 				width: 100px;
 				height: 145px;
 				border: 1px solid #fff;
@@ -267,22 +266,19 @@ body{
 		}
 	}
 	.section-main{
-		margin: 40px 0;
+		margin: 20px 0;
 		.photos{
 			font-size: 0;
 			padding: 0 15px;
 			.photo-item{
 				display: inline-block;
 				position: relative;
-				width: 240px;
-				height: 320px;
+				width: 238px;
 				overflow: hidden;
-				box-sizing:border-box;
 				border: 1px solid #fff;
 				border-radius: 5px;
 				.item-wrapper{
 					width: 240px;
-					height: 320px;
 					overflow: hidden;
 					.item-img{
 						width: 100%;
@@ -304,12 +300,11 @@ body{
 			.icon-origin{
 				display: block;
 				position: absolute;
-				bottom: 0;
+				bottom: 0px;
 				left: 0;
 				width: 45px;
 				height: 28px;
 				background: url(/img/index-sprite.png)no-repeat -234px -42px;
-				z-index: 5;
 				opacity: 0.9;
 			}
 		}
