--- a/public/css/main.css
+++ b/public/css/main.css
@@ -214,15 +214,15 @@ body {
 .header .right-area {
   float: right;
   font-size: 0px;
+  position: relative;
 }
 .header .right-area .header-portrait {
   display: inline-block;
   vertical-align: top;
-<<<<<<< HEAD
   width: 37px;
   height: 37px;
   overflow: hidden;
-  margin: 12px 40px 0 0;
+  margin: 12px 110px 0 0;
 }
 .header .right-area .header-portrait .portrait-icon {
   display: block;
@@ -231,8 +231,9 @@ body {
   background: url(/img/index-sprite.png) no-repeat -67px -42px;
 }
 .header .right-area .header-request {
-  display: inline-block;
-  vertical-align: top;
+  position: absolute;
+  top: 0;
+  right: 0;
   width: 70px;
   height: 100px;
   overflow: hidden;
@@ -242,13 +243,6 @@ body {
   width: 100%;
   height: 100%;
   background: url(/img/index-sprite.png) no-repeat -143px -42px;
-=======
-  margin: 12px 40px 0 0;
-}
-.header .right-area .header-request {
-  display: inline-block;
-  vertical-align: top;
->>>>>>> bef7b1ab06d6c545f20fdc964271ec166d9e4299
 }
 /*End header*/
 /*wrap-page*/
@@ -273,18 +267,13 @@ body {
   display: inline-block;
   width: 14px;
   height: 13px;
-<<<<<<< HEAD
   background: url(/img/index-sprite.png) no-repeat -27px -43px;
-=======
-  background: url(/img/icon-change.png) no-repeat 0 0;
->>>>>>> bef7b1ab06d6c545f20fdc964271ec166d9e4299
 }
 .section-header .change .change-text {
   display: inline-block;
   margin: 0 8px;
 }
 .section {
-  height: 525px;
   margin-bottom: 35px;
   border: 1px solid #e8e8e8;
   background-color: #fff;
@@ -293,7 +282,6 @@ body {
   height: 90px;
   padding: 15px 0;
   margin: 0 15px;
-  overflow: hidden;
   border-bottom: 1px solid #e8e8e8;
   font-size: 0;
 }
@@ -335,6 +323,7 @@ body {
 .section .section-top .section-rightarea {
   float: right;
   font-size: 16px;
+  position: relative;
 }
 .section .section-top .section-rightarea .section-btn {
   width: 75px;
@@ -352,8 +341,46 @@ body {
   background-color: #7ecef4;
   margin-left: 20px;
 }
+.section .section-top .section-rightarea .qrcode {
+  position: absolute;
+  z-index: 800;
+  bottom: -145px;
+  right: -15px;
+  width: 100px;
+  height: 145px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  overflow: hidden;
+  background-color: #fff;
+}
+.section .section-top .section-rightarea .qrcode .icon-arrow {
+  display: block;
+  width: 20px;
+  height: 10px;
+  margin: 0 auto;
+  background: url(/img/index-sprite.png) no-repeat -113px -42px;
+}
+.section .section-top .section-rightarea .qrcode .icon-qrcode {
+  width: 100%;
+  height: 106px;
+  overflow: hidden;
+}
+.section .section-top .section-rightarea .qrcode .icon-qrcode .qrcode-img {
+  display: block;
+  width: 100%;
+}
+.section .section-top .section-rightarea .qrcode .qrcode-footer {
+  display: block;
+  height: 30px;
+  width: 100%;
+  line-height: 30px;
+  font-size: 14px;
+  text-align: center;
+  color: #cbebfb;
+  background-color: #7ecef4;
+}
 .section .section-main {
-  margin: 40px 0;
+  margin: 20px 0;
 }
 .section .section-main .photos {
   font-size: 0;
@@ -362,16 +389,13 @@ body {
 .section .section-main .photos .photo-item {
   display: inline-block;
   position: relative;
-  width: 240px;
-  height: 320px;
+  width: 238px;
   overflow: hidden;
-  box-sizing: border-box;
   border: 1px solid #fff;
   border-radius: 5px;
 }
 .section .section-main .photos .photo-item .item-wrapper {
   width: 240px;
-  height: 320px;
   overflow: hidden;
 }
 .section .section-main .photos .photo-item .item-wrapper .item-img {
@@ -392,16 +416,11 @@ body {
 .section .section-main .photos .icon-origin {
   display: block;
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   left: 0;
   width: 45px;
   height: 28px;
-<<<<<<< HEAD
   background: url(/img/index-sprite.png) no-repeat -234px -42px;
-=======
-  background: url(/img/icon-origin.png) no-repeat 0 0;
->>>>>>> bef7b1ab06d6c545f20fdc964271ec166d9e4299
-  z-index: 5;
   opacity: 0.9;
 }
 .last-section {
